# cuttingswap

./: .env  .flake8  .gitignore  README.md  config.py  dev_run  flask_init.py  pyproject.toml
app/: __init__.py  email.py  fake.py  models.py
app/auth/: forms.py  views.py
app/main/: errors.py  views.py
app/messages/: __init__.py  forms.py  views.py
app/offer/: __init__.py  forms.py  views.py
app/static/: gallery.css  messages.css  styles.css
app/templates/: 403.html  404.html  500.html  _macros.html  base.html  home.html  index.html
app/templates/auth/: change_email.html  change_password.html  login.html  register.html  reset_password.html  unconfirmed.html
app/templates/auth/email/: change_email.html  change_email.txt  confirm.html  confirm.txt  reset_password.html  reset_password.txt
app/templates/messages/: all_conversations.html  conversation.html  new_conversation.html
app/templates/offer/: _offers.html  alloffers.html  newoffer.html  singleoffer.html
app/templates/user/: all.html  edit_profile.html  user.html
app/user/: __init__.py  errors.py  forms.py  views.py
app/utils/: image_upload.py
development/: conversations_by_time.sql
migrations/versions/: 47e20a930ea5_added_conversations_and_messages.py  6b0481379dda_added_offerimage.py  70ca79bd6b4e_added_offer.py  a422fa4cf362_renamed_offerimage_mimetype_ext.py  b811c6f472a4_added_location_field_into_db.py  e4e3b6392d30_initial_db.py
