[tool.poetry]
name = "cuttingswap"
version = "0.1.0"
description = ""
authors = ["Nevena Turkovic <nevenatu@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.0.2"
Flask-Bootstrap = "^3.3.7"
Flask-Login = "^0.5.0"
Flask-Mail = "^0.9.1"
Flask-Migrate = "^3.1.0"
Flask-Moment = "^1.0.2"
Flask-PageDown = "^0.4.0"
Flask-SQLAlchemy = "^2.5.1"
Flask-WTF = "^1.0.0"
Markdown = "^3.3.6"
bleach = "^4.1.0"
email-validator = "^1.1.3"

[tool.poetry.dev-dependencies]
Faker = "^9.8.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
